[package]
name = "learnrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = "2"
rust-sdk = { path = "./rust-sdk" }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
